--- a/index.ipynb
+++ b/index.ipynb
@@ -5934,6 +5934,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building an Evaluation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import root_mean_squared_log_error, mean_absolute_error, r2_score\n",
+    "\n",
+    "def get_scores(model):\n",
+    "    train_preds = model.predict(X_train)\n",
+    "    valid_preds = model.predict(X_valid)\n",
+    "    return {\n",
+    "        \"Training MAE\": mean_absolute_error(y_train, train_preds),\n",
+    "        \"Valid MAE\": mean_absolute_error(y_valid, valid_preds),\n",
+    "        \"Training RMSLE\": root_mean_squared_log_error(y_train, train_preds),\n",
+    "        \"Valid RMSLE\": root_mean_squared_log_error(y_valid, valid_preds),\n",
+    "        \"Training R^2\": r2_score(y_train, train_preds),\n",
+    "        \"Valid R^2\": r2_score(y_valid, valid_preds),\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 1577.9991208974761,\n",
+       " 'Valid MAE': 6117.466147930529,\n",
+       " 'Training RMSLE': 0.08412560673596753,\n",
+       " 'Valid RMSLE': 0.2529091457830405,\n",
+       " 'Training R^2': 0.9875337343272359,\n",
+       " 'Valid R^2': 0.8731589629046507}"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_scores(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reducing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 5552.395534334682,\n",
+       " 'Valid MAE': 7183.624927849305,\n",
+       " 'Training RMSLE': 0.25747159809234826,\n",
+       " 'Valid RMSLE': 0.2948809031110679,\n",
+       " 'Training R^2': 0.8609304910203928,\n",
+       " 'Valid R^2': 0.8320885393817002}"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RandomForestRegressor(\n",
+    "    n_jobs = -1,\n",
+    "    random_state = 42,\n",
+    "    max_samples = 10000\n",
+    ")\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "get_scores(model)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
